--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.1.0",
+    "node-sass": "^7.0.3",
+    "sass": "^1.54.9",
+    "sass-loader": "^13.0.2",
     "vite": "^3.1.0"
   }
 }
