--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/vue-fontawesome": "^3.0.1",
+    "jwt-decode": "^3.1.2",
     "pinia": "^2.0.22",
     "vue": "^3.2.37",
     "vue-good-wizard": "^1.4.1",
