--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "node-sass": "^7.0.3",
     "sass": "^1.54.9",
     "sass-loader": "^13.0.2",
-    "vite": "^3.1.0"
+    "vite": "^3.1.0",
+    "vuejs-snackbar": "^4.0.1"
   }
 }
