--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jwt-decode": "^3.1.2",
     "pinia": "^2.0.22",
     "vue": "^3.2.37",
+    "vue-awesome-paginate": "^1.1.3",
     "vue-good-wizard": "^1.4.1",
     "vue-router": "^4.1.5"
   },
